--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
@@ -39,7 +37,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^5.1.0",
+		"@sveltejs/adapter-netlify": "^4.2.1",
 		"bits-ui": "^0.21.5",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
