--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"bits-ui": "^0.21.5",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
+		"discord.js": "^14.15.3",
 		"dotenv": "^16.4.5",
 		"lucide-svelte": "^0.376.1",
 		"mode-watcher": "^0.3.0",
