--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-netlify": "^4.2.1",
+		"@types/prismjs": "^1.26.4",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
@@ -47,6 +48,7 @@
 		"mode-watcher": "^0.3.0",
 		"motion": "^10.17.0",
 		"node-fetch": "^3.3.2",
+		"prismjs": "^1.29.0",
 		"svelte-sonner": "^0.3.24",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
