--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@internationalized/date": "^3.5.5",
 		"@splinetool/runtime": "^1.9.10",
 		"@sveltejs/adapter-netlify": "^4.2.1",
 		"@types/prismjs": "^1.26.4",
-		"bits-ui": "^0.21.10",
+		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
 		"discord.js": "^14.15.3",
@@ -50,6 +51,7 @@
 		"motion": "^10.17.0",
 		"node-fetch": "^3.3.2",
 		"prismjs": "^1.29.0",
+		"svelte-radix": "^1.1.1",
 		"svelte-sonner": "^0.3.24",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
