--- a/package.json
+++ b/package.json
@@ -13,47 +13,48 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tailwindcss/typography": "^0.5.13",
-		"@types/eslint": "^8.56.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.56.0",
+		"@sveltejs/kit": "^2.5.26",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@tailwindcss/typography": "^0.5.15",
+		"@types/eslint": "^8.56.12",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
-		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.38",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.1.2",
+		"eslint-plugin-svelte": "^2.43.0",
+		"mdsvex": "^0.11.2",
+		"postcss": "^8.4.45",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.5.14",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"tailwindcss": "^3.4.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"svelte": "^4.2.19",
+		"svelte-check": "^3.8.6",
+		"tailwindcss": "^3.4.10",
+		"tslib": "^2.7.0",
+		"typescript": "^5.5.4",
+		"vite": "^5.4.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"@internationalized/date": "^3.5.5",
-		"@splinetool/runtime": "^1.9.10",
-		"@sveltejs/adapter-netlify": "^4.2.1",
+		"@splinetool/runtime": "^1.9.25",
+		"@sveltejs/adapter-netlify": "^4.3.3",
 		"@types/prismjs": "^1.26.4",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cross-env": "^7.0.3",
-		"discord.js": "^14.15.3",
+		"discord.js": "^14.16.1",
 		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
 		"lucide-svelte": "^0.376.1",
-		"mode-watcher": "^0.3.0",
-		"motion": "^10.17.0",
+		"mode-watcher": "^0.3.1",
+		"motion": "^10.18.0",
 		"node-fetch": "^3.3.2",
 		"prismjs": "^1.29.0",
 		"svelte-radix": "^1.1.1",
-		"svelte-sonner": "^0.3.24",
-		"tailwind-merge": "^2.3.0",
+		"svelte-sonner": "^0.3.27",
+		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss-animate": "^1.0.7"
 	}
